--- a/common-app-covpass-check/src/main/res/values-de/generated_strings.xml
+++ b/common-app-covpass-check/src/main/res/values-de/generated_strings.xml
@@ -56,7 +56,7 @@
 	<string name="error_camera_access_button_allow">Erlauben</string>
 	<string name="validation_check_popup_valid_vaccination_recovery_title">Zertifikat gültig*</string>
 	<string name="validation_check_popup_valid_vaccination_recovery_message">Gleichen Sie jetzt folgende Daten mit einem Ausweisdokument der geprüften Person ab.</string>
-	<string name="validation_check_popup_valid_vaccination_date_of_birth">Geboren am %s</string>
+	<string name="validation_check_popup_valid_vaccination_date_of_birth">Geburstag aus Datenschutzgründen versteckt</string>
 	<string name="validation_check_popup_valid_vaccination_recovery_note">* Genesenen- oder Impfzertifikat liegt vor.</string>
 	<string name="validation_check_popup_valid_vaccination_button_title">Weiteres Zertifikat scannen</string>
 	<string name="validation_check_popup_unsuccessful_certificate_title">Zertifikat ungültig</string>
@@ -68,7 +68,7 @@
 	<string name="validation_check_popup_unsuccessful_certificate_button_title">Weiteres Zertifikat scannen</string>
 	<string name="validation_check_popup_test_title">Negativer Schnelltest von vor %d Stunden</string>
 	<string name="validation_check_popup_test_message">Gleichen Sie jetzt folgende Daten mit einem Ausweisdokument der geprüften Person ab.</string>
-	<string name="validation_check_popup_test_date_of_birth">Geboren am %s</string>
+	<string name="validation_check_popup_test_date_of_birth">Geburstag aus Datenschutzgründen versteckt</string>
 	<string name="validation_check_popup_test_date_of_issue">Zeitpunkt der Probenahme</string>
 	<string name="validation_check_popup_test_button_title">Weiteres Zertifikat scannen</string>
 	<string name="validation_check_popup_valid_pcr_test_title">Negativer PCR-Test von vor %d Stunden</string>
